fix, style: 온도 4자릿수일 때 overflow 되지 않도록 수정

--- a/static/closet/css/dashboard_recommendation.css
+++ b/static/closet/css/dashboard_recommendation.css
@@ -11,7 +11,7 @@
 /* 제목 스타일 */
 .recent-recommendation h2 {
     text-align: center;
-    color: var(--color-gray-darkest);
+    color: var black;
     margin-bottom: 2em;
     font-size: var(--font-size-1);
     line-height: var(--line-height-1);
@@ -106,4 +106,3 @@
     box-shadow: 0 2px 4px rgba(0,0,0,0.2);
     transition: all 0.2s ease;
 }
-
